--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+logging.level.org.springframework.jdbc.core=DEBUG
 
+spring.datasource.url=
+spring.jpa.show-sql=false
+spring.jpa.generate-ddl=false
+spring.jpa.hibernate.ddl-auto=update
+spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
+spring.sql.init.mode=always
