--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 logging.level.org.springframework.jdbc.core=DEBUG
 
-spring.datasource.url=
+spring.datasource.url=jdbc:sqlserver://theherd.database.windows.net:1433;database=the_herd;user=cmpt276_group@theherd;password=9J2MHvdx5uTzdH;encrypt=true;trustServerCertificate=false;hostNameInCertificate=*.database.windows.net;loginTimeout=30;
 spring.jpa.show-sql=false
 spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
