--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,3 +7,8 @@ spring.jpa.generate-ddl=false
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.properties.hibernate.jdbc.lob.non_contextual_creation=true
 spring.sql.init.mode=always
+
+spring.thymeleaf.cache=false
+spring.thymeleaf.mode=LEGACYHTML5
+
+server.port=7070
