--- a/backend/pom.xml
+++ b/backend/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/>
     </parent>
     <groupId>com.the_herd</groupId>
-    <artifactId>thymeleaf-layout-adminlte</artifactId>
+    <artifactId>backend</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>backend</name>
     <description>backend</description>
