--- a/frontend/package.json
+++ b/frontend/package.json
@@ -32,6 +32,7 @@
     "next": "14.1.4",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-pro-sidebar": "^1.1.0",
     "yup": "^1.4.0"
