--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,12 +24,15 @@
     "@nivo/geo": "^0.85.1",
     "@nivo/line": "^0.85.1",
     "@nivo/pie": "^0.85.1",
+    "@stripe/react-stripe-js": "^2.7.0",
+    "@stripe/stripe-js": "^3.3.0",
     "@studio-freight/react-lenis": "^0.0.46",
     "formik": "^2.4.5",
     "fullcalendar": "^6.1.11",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
     "next": "14.1.4",
+    "qrcode.react": "^3.1.0",
     "react": "^18",
     "react-dom": "^18",
     "react-icons": "^5.0.1",
