--- a/frontend/package.json
+++ b/frontend/package.json
@@ -24,13 +24,17 @@
     "@nivo/geo": "^0.85.1",
     "@nivo/line": "^0.85.1",
     "@nivo/pie": "^0.85.1",
+    "@radix-ui/react-aspect-ratio": "^1.0.3",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "@studio-freight/react-lenis": "^0.0.46",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.1",
     "formik": "^2.4.5",
     "fullcalendar": "^6.1.11",
     "gsap": "^3.12.5",
     "js-cookie": "^3.0.5",
+    "lucide-react": "^0.377.0",
     "next": "14.1.4",
     "qrcode.react": "^3.1.0",
     "react": "^18",
@@ -38,6 +42,8 @@
     "react-icons": "^5.0.1",
     "react-loader-spinner": "^6.1.6",
     "react-pro-sidebar": "^1.1.0",
+    "tailwind-merge": "^2.3.0",
+    "tailwindcss-animate": "^1.0.7",
     "yup": "^1.4.0"
   },
   "devDependencies": {
