--- a/frontend/package.json
+++ b/frontend/package.json
@@ -25,6 +25,8 @@
     "@nivo/line": "^0.85.1",
     "@nivo/pie": "^0.85.1",
     "@radix-ui/react-aspect-ratio": "^1.0.3",
+    "@radix-ui/react-label": "^2.0.2",
+    "@radix-ui/react-radio-group": "^1.1.3",
     "@stripe/react-stripe-js": "^2.7.0",
     "@stripe/stripe-js": "^3.3.0",
     "@studio-freight/react-lenis": "^0.0.46",
